# testWhitesourceCMake

./: CMakeLists.txt  main.cc
